--- a/src/components/question-history.scss
+++ b/src/components/question-history.scss
@@ -50,30 +50,17 @@ html {
 
 	h1 {
 		background: #f1814b;
-		padding: 6px 10px;
-		margin: 0px;
-		font-size: 18px;
-		font-weight: bold;
 		color: #ffffff;
 	}
 
 	thead {
-
 		tr {
-			height: 2em;
-			padding: 6px 0px;
 			border-bottom: solid 1px #888;
 		}
 	}
 
 	tbody {
 		tr {
-			height: 2em;
-			cursor: pointer;
-
-			td {
-				text-align: center;
-			}
 			&:hover {
 				background: #295b99;
 			}
@@ -109,17 +96,7 @@ html {
 	}
 }
 
-.actions {
-	position: fixed;
-	width: 80px;
-	left: 50%;
-	bottom: 0px;
-	margin-left: -40px;
-	padding-bottom: 14px;
-
-	text-align: center;
-	font-size: 1.1em;
-
+.darkMode .actions {
 	a {
 		color: #61a4e2;
 	}
