--- a/src/components/my-widgets-scores.scss
+++ b/src/components/my-widgets-scores.scss
@@ -605,25 +605,10 @@
 }
 
 .darkMode .scores {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	min-height: 300px;
-	margin: 10px;
-	overflow-x: hidden;
-	overflow-y: auto;
-	padding-bottom: 1em;
-
 	.student-activity-header {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		padding: 0;
-
 		border-bottom: #08090c dotted 1px;
 	
 		.action_button {
-			
 			color: $extremely-dark-gray;
 			text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
 			box-shadow: 1px 2px 4px #08090c;
@@ -631,8 +616,6 @@
 			&.disabled, &.disabled:hover {
 				background: #d4d4d4;
 				color: #545454;
-				cursor: default;
-				opacity: 0.5;
 			}
 		}
 	}
@@ -641,8 +624,6 @@
 	#export_scores_button.disabled:hover {
 		background: #21232a;
 		color: #545454;
-		cursor: default;
-		opacity: 0.5;
 	}
 
 	.graph {
@@ -667,75 +648,33 @@
 		}
 	}
 
-	h2 {
-		/* border-bottom: #08090c dotted 1px; */
-		padding-bottom: 14px;
-		padding-top: 2px;
-		padding-bottom: 13px;
-		margin-bottom: 0;
-	}
-
 	h3 {
 		color: #fff;
 	}
 
 	#export_scores_button {
-		padding: 7px 23px 8px 23px;
 		background-color: $color-yellow;
-		font-weight: 700;
 		color: $extremely-dark-gray;
 		text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
-		//box-shadow: 1px 2px 4px #ececec;
 		box-shadow: 1px 2px 4px #08090c;
-		font-size: 18px;
-		cursor: pointer;
-		display: inline-block;
-		user-select: none;
-		// border: 1px solid #525252;
-		border-radius: 4px;
-		position: absolute;
-		top: 13px;
-		right: 2px;
 
 		&:hover:not(.disabled) {
 			background: $color-yellow-hover;
-			text-decoration: none;
 		}
 
 		&.disabled {
 			color: #545454;
-			cursor: auto;
 		}
 	}
 
 	.scoreWrapper {
-		display: inline-block;
-		position: relative;
-		margin-top: 1em;
-
 		ul.choices {
-			display: inline-block;
-			margin: 15px 0 0 0;
-			padding: 0;
-			height: 23px;
-
 			li {
-				list-style: none;
-				display: inline-block;
-				padding-right: 3px;
-
 				a {
 					color: #fff;
-					padding: 6px 10px 4px 10px;
 					border-left: solid #08090c 1px;
 					border-top: solid #08090c 1px;
 					border-right: solid #08090c 1px;
-					padding-bottom: 5px;
-					cursor: pointer;
-
-					&:hover {
-						text-decoration: none;
-					}
 				}
 			}
 
@@ -745,167 +684,45 @@
 		}
 
 		.storage {
-			font-weight: bold;
-			padding: 0 0 2px 0;
 			border-bottom: 1px #1778af solid;
-			margin: 0 10px;
 			color: #1778af;
-			float: right;
-			margin: 0;
 
 			&:hover {
-				text-decoration: none;
 				color: #0093e7;
 				border-bottom: 1px #0093e7 solid;
-				cursor: pointer;
 			}
-		}
-
-		h3.view {
-			display: inline-block;
-			margin: 15px 0.5em 0 0;
-			padding: 0;
 		}
 
 		.display.graph {
 			background: #9696B0;
-			margin: 0;
-			padding: 20px 0 0 20px;
 			border: solid #08090c 1px;
-			width: 550px;
-			float: left;
 			color: #000;
-
-			.type {
-				padding: 0;
-				margin: 35px 0 0 0;
-				float: left;
-
-				li {
-					list-style: none;
-					margin: 0 0 10px 0;
-				}
-			}
-
-			.chart {
-				width: 475px;
-				height: 300px;
-				float: left;
-				margin: 0 10px 15px 10px;
-			}
 		}
 
 		.display.table {
 			background: #1d1f25;
-			margin: 0;
-			padding: 20px;
 			border: solid #08090c 1px;
-			float: left;
-			width: 570px;
-			min-height: 300px;
-			padding: 0 0 25px 0;
-			display: block;
-
-			&.loading {
-				display: flex;
-			}
-
-			.no-user-search-results {
-				margin-left: 20px;
-				font-weight: 700;
-			}
 		}
 
 		.display.data {
-			font-family: 'Lucida Grande', sans-serif;
-			width: 638px;
 			background: #1d1f25;
-			margin: 0;
-			padding: 20px;
 			border: solid #08090c 1px;
-			float: left;
-			min-height: 393px;
-			display: block;
-
-			&.loading {
-				display: flex;
-			}
-
-			.loading-holder {
-				width: 100%;
-			}
-
-			.anonymize-box {
-				cursor: pointer;
-			}
-
-			input[type='checkbox'],
-			select {
-				cursor: pointer;
-			}
-
-			.table.label {
-				select,
-				span {
-					margin-left: 5px;
-				}
-			}
 
 			.truncated-table {
 				background: #295b99;
-				padding: 10px;
-				margin-top: 20px;
-				font-size: 9pt;
-				text-align: center;
-				border-radius: 4px;
 				border: 1px solid rgba(0, 0, 0, 0.2);
 			}
 
-			.anonymize-box {
-				margin-right: 5px;
-			}
-
-			.dataTable {
-				margin-bottom: 0.755em;
-			}
-
-			table {
-				margin-top: 20px;
-			}
-
 			.data_tables_info_holder {
-				display: flex;
-				align-items: center;
-				flex-wrap: wrap;
-
 				.data_tables_info {
 					color: #d8d8d8;
-					margin-right: auto;
-					padding-bottom: 5px;
 				}
 
 				.data_tables_paginate {
 					color: #d8d8d8;
-					margin-left: auto;
-
-					.ellipsis {
-						padding: 0 1em;
-					}
 
 					.paginate_button {
-						box-sizing: border-box;
-						display: inline-block;
-						min-width: 1.5em;
-						padding: 0.5em 1em;
-						margin-left: 2px;
-						text-align: center;
-						text-decoration: none !important;
-						cursor: pointer;
-						*cursor: hand;
 						color: #d8d8d8;
-						border: 1px solid transparent;
-						border-radius: 2px;
-						opacity: 1;
 
 						&.current {
 							border: 1px solid #08090c;
@@ -959,43 +776,20 @@
 
 			.score-search {
 				background: rgba(0, 0, 0, 0.05);
-				width: 100%;
-				padding: 6px 10px 10px 10px;
 
 				input[type='text'] {
-					width: 190px;
-					margin: 7px 10px 0 10px;
 					border: solid 1px #08090c;
-					border-radius: 12px;
-					height: 19px;
-					//background: #fff url('/img/magnifyingglass.png') 5px 50% no-repeat;
 					background: #21232a url('/img/magnifyingglass_dark.png') 5px 50% no-repeat;
-					padding-left: 23px;
-					padding-right: 10px;
-					outline: none;
+					color: #fff;
 				}
 			}
 
 			.scoreListContainer {
-				position: relative;
-				z-index: 3;
-				float: left;
-				width: 40%;
-				margin-left: 20px;
-
 				background: #21232a;
-				border-radius: 3px;
-
 				box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
 
 				.scoreListScrollContainer {
-					max-height: 550px;
-					width: 100%;
-					overflow: auto;
-
 					.scoreListTable {
-						width: 100%;
-
 						.listName {
 							&.selected {
 								background: #295b99;
@@ -1005,73 +799,34 @@
 				}
 
 				.scoreListHead {
-					display: block;
-					height: 1.5em;
-					padding: 3px 0 0 5px;
 					background-color: #1d1f25;
 					color: #fff;
-					text-decoration: none;
 				}
 
 				tbody tr:hover {
 					background: #295b99;
-					cursor: pointer;
 				}
 			}
 
 			.scoreTableContainer {
-				position: relative;
-				z-index: 1;
-				float: left;
-				width: 55%;
-				right: 5px;
-
-				margin-top: 15px;
-				padding: 10px 0 10px 0;
-
 				background: #21232a;
-				border-radius: 3px;
 				box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
 
 				.scoreTable {
-					width: 95%;
-					margin-left: 10px;
-					border-collapse: collapse;
-
-					.elapsed {
-						text-align: right;
-					}
-
 					td {
-						border: none;
 						border-bottom: solid #dbdbdb 1px;
 					}
 
 					tr {
-						cursor: pointer;
-
 						&:hover {
 							background: #b4570a;
-						}
-
-						&:last-child td {
-							border-bottom: none;
 						}
 					}
 				}
 			}
 
-			.scoreTableTitle {
-				height: 1.5em;
-			}
-
 			thead tr {
 				background: #cdcdcd;
-			}
-
-			td {
-				height: 1.5em;
-				padding: 6px 3px;
 			}
 
 			tbody tr.rowSelected {
@@ -1080,123 +835,35 @@
 		}
 
 		.numeric {
-			float: left;
-			margin: 0;
-			padding: 0;
-			width: 105px;
-
 			li {
-				list-style: none;
-				text-align: center;
 				background: #4c4e58;
-				padding: 5px;
-				margin: 0 0 10px 0;
-
 				p {
-					padding: 0;
-					margin: 0;
 					color: #8EC6FA;
-					text-align: center;
-					font-size: 2em;
-					font-weight: 900;
-					font-family: 'Kameron', Georgia, 'Times New Roman', Times, serif;
-				}
-
-				h4 {
-					padding: 0;
-					margin: 0;
 				}
 			}
 		}
 	}
 
 	.show-older-scores-button {
-		border-radius: 2px;
-		background: #f3f3f3;
-		border: 1px solid #dbdbdb;
-		display: inline-block;
-		padding: 4px 10px 4px 10px;
-		font-size: 10pt;
-		text-decoration: underline;
-		width: 654px;
-		text-align: center;
-		margin-top: 1em;
-		font-weight: bold;
-		cursor: pointer;
-
-		&.hide {
-			display: none;
-		}
-
-		&:hover {
-			opacity: 0.8;
-		}
-	}
-
-	.dataTables_info_holder {
-		display: flex;
-		align-items: center;
-
-		.dataTables_length {
-			margin-right: auto;
-			margin-bottom: 5px;
-
-			select {
-				margin: 0 5px;
-			}
-		}
-
-		.dataTables_filter {
-			margin-left: auto;
-
-			label input {
-				margin-left: 5px;
-			}
-		}
-	}
-
-	.dataTable {
-		width: 100%;
-		overflow: auto;
-		display: block;
-	}
-
-	.paginate_button {
-		margin-right: 5px;
-		cursor: pointer;
-		user-select: none;
+		background: #4c4e58;
+		border: 1px solid #181920;
 	}
 
 	table.storage_table {
-		// font-family: 'Lucida Grande', sans-serif;
-		// width: 638px;
-		margin-top: 5px;
-		border-spacing: 0;
 		border-bottom: 1px solid #d8d8d8;
-		font-size: 13px;
 
 		thead {
 			th {
-				padding: 3px 18px 3px 10px;
 				border-bottom: 1px solid #d8d8d8;
-				font-weight: bold;
 			}
 		}
 		tbody {
-			display: table-row-group;
-			vertical-align: middle;
-			border-color: inherit;
 			tr:nth-child(odd) {
 				background-color: #eee;
 			}
 			tr {
 				background-color: white;
 				text-align: left;
-			}
-			td {
-				padding: 5px 10px;
-				margin: 0;
-				position: relative;
 			}
 		}
 	}
