--- a/src/components/profile-page.scss
+++ b/src/components/profile-page.scss
@@ -452,98 +452,31 @@
 		padding: 0 0 0 20px;
 	}
 }
+
 .darkMode .user, .darkMode .settings {
-
-	@media (max-width: 800px) {
-		section.page {
-			margin: 15px 10px 0px 10px !important;
-			width: auto !important;
-		}
-	}
-
 	section.page, aside {
 		background: #21232a;
-		border-radius: 4px;
 		border: #181920 1px solid;
 		box-shadow: 1px 3px 10px #08090c;
 	}
 
 	section.page {
-		margin: 15px auto 0px auto;
-		top: 0;
-		right: 0;
-		z-index: 100;
-		width: 575px; /*625px*/
-		padding: 10px 60px 30px 145px;
 		background: #21232a url('/img/user_page_background_dark.gif') 0 0 repeat-y;
-		min-height: 400px;
-
-		.loading-icon-holder {
-			position: absolute;
-			width: 300px;
-			height: 300px;
-
-			left: calc(50% - 150px);
-			top: calc(50% - 150px);
-		}
 
 		h2 {
-			font-weight: 700;
-			font-size: 38px;
 			border-bottom: solid #dcdcdc .5px;
-			margin: 0;
-			padding: 0 0 5px 0;
 		}
 
 		span {
-			font-weight: 700;
-			padding: 0 0 5px 0;
-			font-size: 12px;
-			text-transform: uppercase;
 			color: #b2b2b2;
-			display: block;
-			margin-top: 20px;
-		}
-
-		ul {
-			font-weight: 100;
-			font-size: 16px;
-			list-style-type: none;
-			padding-left: 0px;
-
-			&.email_exp_addr {
-				font-weight: 300;
-				margin: 0;
-			}
 		}
 
 		h3 {
 			color: #000;
-			font-weight: 700;
-			height: 25px;
-		}
-
-		.profile_status {
-			display: flex;
-			align-items: baseline;
-			justify-content: space-between;
 		}
 
 		.avatar_big {
-			position: absolute;
-			top: 25px;
-			left: 12px;
-			text-align: right;
 			color: #fff;
-			font-size: 10px;
-			line-height: 13px;
-
-
-			img {
-				width: 90px;
-				height: 90px;
-				border-radius: 10px;
-			}
 
 			a:link,
 			a:visited,
@@ -553,62 +486,29 @@
 
 			a:hover {
 				color: #fff;
-				text-decoration: none;
 			}
 
 			a.external {
-				padding-right: 18px;
 				background: url('/img/external_link_arrow.png') right center no-repeat;
 			}
 		}
 
 		// TODO remove?
 		.rank {
-			position: absolute;
-			top: 25px;
-			right: 25px;
-
-			font-size: 55px;
-			padding: 0;
-			margin: 0;
-			font-weight: 600;
-			color: #0093e7;
-			line-height: 35px;
-			text-align: right;
-			margin-top: 5px;
+			color: #61a4e2;
 
 			a {
-				display: block;
-				font-size: 13px;
-				color: #969696;
-				text-decoration: underline;
+				color: #d8d8d8;
 
 				&:hover {
-					color: #969696;
-					text-decoration: none;
+					color: #d8d8d8;
 				}
-			}
-		}
-
-		ul.user_information {
-			padding: 0;
-			font-size: 13px;
-			font-weight: bold;
-
-			li {
-				list-style-type: none;
-				display: inline-block;
-				margin-right: 10px;
 			}
 		}
 
 		.user_type {
 			background: #21232a;
 			color: #fff;
-			border-radius: 3px;
-			text-transform: uppercase;
-			padding: 2px 6px;
-			font-size: 12px;
 
 			&.staff {
 				background: #ef0223;
@@ -621,57 +521,18 @@
 			}
 		}
 
-		.activity_subheader {
-			margin-top: 20px;
-		}
-
 		.activity {
-			width: 575px;
-			padding: 0;
-
 			.loading-icon-holder {
-				display: none;
-
 				&.loading {
-					z-index: 100;
-					display: block;
-					width: 150px;
-					height: 150px;
-					left: calc(50% - 75px);
-					top: calc(50% - 75px);
 					background: #21232a;
 					color: #fff;
-					border-radius: 25px;
-				}
-			}
-
-			ul {
-				padding: 0;
-
-				&.loading {
-					display: none;
-				}
-
-				li {
-					list-style-type: none;
 				}
 			}
 		}
 
 		.activity_log {
-			margin: 0;
-			padding: 0;
-
-			&:last-child a {
-				border: 0;
-			}
-
 			.score-link {
-				display: block;
-				min-height: 50px;
-				padding: 5px;
 				border-bottom: #d8d8d8 1px solid;
-				position: relative;
 			}
 
 			&.complete {
@@ -684,210 +545,67 @@
 				background: #4c4e58;
 			}
 
-			&.perfect_score .score {
-				font-size: 21px;
-				padding-top: 6px;
-				padding-bottom: 6px;
-			}
-
 			.score {
-				display: block;
-				position: absolute;
-				left: 5px;
-				top: 10px;
-				width: 40px;
-
 				background: #295b99;
 				color: #fff;
-				border-radius: 3px;
-				font-size: 28px;
-				min-height: 28px;
-				font-weight: 700;
-				text-align: center;
-				overflow: hidden;
-
-				padding-top: 2px;
-				padding-bottom: 4px;
-				height: inherit;
 			}
 
 			.date {
-				display: block;
-				position: absolute;
-				right: 5px;
-				top: 5px;
-				text-align: right;
-
 				color: #d8d8d8;
-
-				font-size: 11px;
-				font-weight: 700;
 			}
 
 			.widget {
-				display: block;
-				text-align: left;
-				font-family: 'LatoBlack', arial, serif;
 				color: #d8d8d8;
-				font-size: 11px;
-				font-weight: 700;
-				text-transform: uppercase;
-				position: absolute;
-				left: 55px;
-				top: 10px;
-			}
-
-			.title {
-				font-size: 17px;
-				position: absolute;
-				left: 55px;
-				top: 22px;
 			}
 
 			.status {
-				position: absolute;
-				top: 12px;
-				right: 1px;
 				color: #eee;
-				font-size: 30px;
 			}
 		}
 
 		.no_logs {
 			background: #4c4e58;
-			border-radius: 5px;
-			padding: 15px 20px;
-			text-align: center;
-			font-size: 15px;
 			color: #fff;
 		}
 
-		// TODO delete?
-		.activity_logs_template {
-			display: none;
-		}
-
 		.show_more_activity {
-			display: block;
-			width: 80%;
-			margin: 10px auto;
-			padding: 10px 0;
-
 			span {
-				margin: 0;
-				padding: 0;
 				color: $extremely-dark-gray;
-				text-align: center;
 			}
 		}
 
 		.main_navigation {
-			display: block;
-			position: absolute;
-			left: 0;
-			top: 175px;
-			width: 83px;
-			margin: 0;
-			padding: 0;
-			list-style-type: none;
-
 			li {
 				a {
-					display: block;
-					width: 83px;
-					text-align: left;
-					padding-left: 20px;
-					font-size: 12px;
-					font-weight: 700;
-					padding-top: 10px;
-					padding-bottom: 10px;
-					padding-right: 30px;
 					color: #fff;
-
-					&:hover {
-						text-decoration: none;
-					}
 				}
 
 				&.selected {
 					a {
-						margin-left: 0px;
 						background: #21232a;
-						border-right: 0;
-						border-left: 0;
 						color: #fff;
-						text-decoration: none;
-
-						&:hover {
-							text-decoration: none;
-						}
 					}
 				}
 			}
 		}
 
 		&.settings {
-			h3 {
-				margin-bottom: 0.5em;
-			}
-
-			label, input {
-				cursor: pointer;
-			}
-
-			label {
-				font-size: 14px;
-			}
-
-			ul {
-				font-size: 14px;
-				list-style-type: none;
-				padding: 0;
-				margin: 0;
-				margin-bottom: 3em;
-
-				li {
-					display: block;
-					margin-bottom: 0.5em;
-				}
-
-			}
-
 			.action_button {
-				margin-top: 3em;
-
-				&.no_top_margin {
-					margin-top: 0;
-				}
-
 				&.disabled {
 					background: #aeaeae;
 					background-image: linear-gradient(#e4e4e4, #b8b8b8);
 					border-color: #747474;
 					color: #545454;
-					cursor: default;
-					opacity: 0.5;
 				}
 			}
 
 			.email_exp {
 				color: #7f7f7f;
-				font-size: 12px;
-				font-weight: 300;
-				margin: 10px 0 0 0;
 
 				.email_exp_addr {
 					color: #3f3f3f;
 				}
 			}
 		} // end settings
-
 	} // end section.page
-
-	.settingSaveAlert {
-		display: inline-block;
-		font-family: 'Lucida Grande', sans-serif;
-		margin: 0;
-		padding: 0 0 0 20px;
-	}
 }
