--- a/src/components/my-widgets-scores.scss
+++ b/src/components/my-widgets-scores.scss
@@ -361,6 +361,7 @@
 			.scoreListContainer {
 				display: flex;
 				width: 100%;
+				max-height: 300px;
 
 				.centeredText {
 					display: flex;
@@ -377,9 +378,10 @@
 					background: rgba(0, 0, 0, 0.05);
 					padding: 10px 10px;
 					gap: 10px;
+					width: 35%;
+					overflow-y: auto;
 
 					input[type='text'] {
-						width: 190px;
 						border: solid 1px #b0b0b0;
 						border-radius: 12px;
 						height: 19px;
@@ -421,10 +423,11 @@
 
 				.scoreListStudentScoreTable {
 					display: flex;
+					flex: 1;
 					flex-direction: column;
 					gap: 10px;
-					flex: 1;
 					padding: 10px;
+					overflow-y: auto;
 
 					table {
 						width: 100%;
