General tweaks and improvements to profile, my widgets pages

--- a/src/components/catalog.scss
+++ b/src/components/catalog.scss
@@ -533,7 +533,7 @@
 	
 				input {
 					color: #fff;
-					background: #21232a;
+					background: $color-input-box-bg-dark;
 					border: solid 1px #13151a;
 				}
 			}
