--- a/src/components/no-content-icon.scss
+++ b/src/components/no-content-icon.scss
@@ -16,7 +16,6 @@ div#no-score-content, div#not-scorable {
 	
 	&#no-score-content {
 		background: #fff url('/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
-		//background: #21232a url('/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
 	}
 
 	&#not-scorable {
@@ -34,7 +33,7 @@ div#no-score-content, div#not-scorable {
 	}
 }
 
-.darkMode div#no-score-content, div#not-scorable {
+.darkMode div#no-score-content, .darkMode div#not-scorable {
 	&#no-score-content {
 		background: #21232a url('/img/kogneato_no_scores_dark.svg') 10% 30%/250px auto no-repeat;
 	}
